--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "hardhat": "^2.12.3"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.1.3",
     "charonAMM": "github:charonAMM/charonAMM",
     "circomlibjs": "^0.1.7",
     "dotenv": "^16.0.2",
     "feeContract": "github:charonAMM/feeContract",
+    "hardhat-contract-sizer": "2.0.3",
+    "hardhat-gas-reporter": "^1.0.9",
     "incentiveToken": "github:charonAMM/incentiveToken",
     "usingtellor": "^5.0.0",
     "web3": "^1.7.5"
