--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "circuit": "./scripts/buildCircuit.sh 2 && ./scripts/buildCircuit.sh 16",
     "compile": "npx hardhat compile && yarn compile:hasher",
+    "deploy": "./scripts/deploySystem.sh",
     "compile:hasher": "npx hardhat hasher",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run circuit && npm run compile"
