--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "scripts": {
     "circuit": "./scripts/buildCircuit.sh 2 && ./scripts/buildCircuit.sh 16",
+    "prodCircuit1": "./scripts/liveCircuitp1.sh 2 && ./scripts/liveCircuitp1.sh 16",
+    "prodCircuit2": "./scripts/liveCircuitp2.sh 2 && ./scripts/liveCircuitp2.sh 16",
     "compile": "npx hardhat compile && yarn compile:hasher",
     "deploy": "./scripts/deploySystem.sh",
     "dailyChecks": "./scripts/dailyScript.sh",
     "compile:hasher": "npx hardhat hasher",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run circuit && npm run compile"
+    "build": "npm run circuit && npm run compile",
+    "buildProdP1" : "npm run prodCircuit1",
+    "buildProdP2": "npm run prodCircuit2 && npm run compile"
   },
   "repository": {
     "type": "git",
